# django-api-escola-02

./: .gitignore  README.md  pyproject.toml
escola/: serializer.py  views.py
escola/migrations/: 0003_aluno_foto.py
escola/tests/: test_alunos.py  test_cursos.py  test_matriculas.py
locale/pt_BR/LC_MESSAGES/: django.po
setup/: settings.py  urls.py
